--- a/estilos.css
+++ b/estilos.css
@@ -1,12 +1,12 @@
 h1{
-    color: blue;
+    color: rgb(255, 51, 0);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
 
 }
 
 p{
-    color: lawngreen;
+    color: rgb(0, 130, 252);
     font-family: 'Times New Roman', Times, serif;
     font-size: 15px;
 }
