--- a/estilos.css
+++ b/estilos.css
@@ -1,14 +1,14 @@
 h1{
-    color: rgba(255, 51, 0, 0.712);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
+    color: rgba(151, 38, 10, 0.507);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 40px;
 
 }
 
 p{
-    color: rgb(28, 91, 228);
+    color: rgb(24, 24, 26);
     font-family: 'Times New Roman', Times, serif;
-    font-size: 15px;
+    font-size: 20px;
 }
 
 img{
